--- a/ChatClient/Views/MainWindow.xaml
+++ b/ChatClient/Views/MainWindow.xaml
@@ -4,21 +4,108 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChatClient.Views"
+        xmlns:emoji="clr-namespace:Emoji.Wpf;assembly=Emoji.Wpf"
         mc:Ignorable="d"
-        Title="Chat" Height="400" Width="400">
+        Title="Chat" Height="500" Width="550"
+        WindowStartupLocation="CenterScreen">
+
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
+            <!-- Lista poruka -->
             <RowDefinition Height="Auto" />
+            <!-- Unos poruke -->
         </Grid.RowDefinitions>
 
-        <!-- Lista poruka -->
-        <ListBox ItemsSource="{Binding Messages}" />
+        <!-- 📨 Prikaz poruka -->
+        <ListBox ItemsSource="{Binding Messages}" 
+                 Grid.Row="0"
+                 FontSize="14"
+                 Margin="0,0,0,10"
+                 Background="#F9F9F9"
+                 BorderBrush="#DDD"
+                 BorderThickness="1"
+                 Width="400"
+                 HorizontalAlignment="Left"
+                 />
+        <ListBox ItemsSource="{Binding OnlineUsers}"
+         Width="100"
+         HorizontalAlignment="Right"
+         MouseDoubleClick="OnlineUsersList_MouseDoubleClick"></ListBox>
 
-        <!-- Unos poruke -->
-        <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="0,10,0,0">
-            <TextBox Text="{Binding CurrentMessage, UpdateSourceTrigger=PropertyChanged}" Width="280" KeyDown="OnKeyDownSend" />
-            <Button Content="Send" Command="{Binding SendCommand}" Width="80" Margin="10,0,0,0"/>
+
+        <!-- 🖊️ Unos poruke + dugmad -->
+        <StackPanel Orientation="Horizontal" Grid.Row="1">
+            <emoji:TextBox Text="{Binding CurrentMessage, UpdateSourceTrigger=PropertyChanged}" 
+                     Width="220" 
+                     FontSize="14"
+                     Margin="0,0,10,0"
+                     VerticalContentAlignment="Center"
+                     Padding="5"
+                    KeyDown="OnKeyDownSend" 
+
+                />
+
+            <Button Content="😊" 
+                     Width="40" 
+                     Height="40" 
+                     Command="{Binding EmojiVM.OpenEmojiPanelCommand}"
+                     ToolTip="Otvori emoji panel"
+                     Margin="0,0,10,0" />
+
+            <Button Content="Send" 
+                    Width="80" 
+                    Height="40" 
+                    Command="{Binding SendCommand}" 
+                    Background="#007ACC" 
+                    Foreground="White"
+                    FontWeight="Bold" 
+                    
+                    />
         </StackPanel>
+
+        <Popup IsOpen="{Binding EmojiVM.IsEmojiPanelOpen}"
+       PlacementTarget="{Binding ElementName=EmojiButton}"
+       Placement="Right"
+       StaysOpen="False">
+            <Border Background="White"
+            BorderBrush="LightCoral"
+            BorderThickness="2"
+            Padding="5"
+            Width="250"
+            Height="300">
+                <ScrollViewer VerticalScrollBarVisibility="Auto">
+                    <TreeView ItemsSource="{Binding EmojiVM.EmojiGroups}"
+                      VirtualizingStackPanel.IsVirtualizing="True"
+                      VirtualizingStackPanel.VirtualizationMode="Recycling"
+                      ScrollViewer.CanContentScroll="True">
+                        <TreeView.ItemTemplate>
+                            <HierarchicalDataTemplate ItemsSource="{Binding Subgroups}">
+                                <TextBlock Text="{Binding GroupName}" FontWeight="Bold"/>
+                                <HierarchicalDataTemplate.ItemTemplate>
+                                    <HierarchicalDataTemplate ItemsSource="{Binding Emojis}">
+                                        <TextBlock Text="{Binding SubgroupName}" FontStyle="Italic"/>
+                                        <HierarchicalDataTemplate.ItemTemplate>
+                                            <DataTemplate>
+                                                <Button Content="{Binding}"
+                                                Command="{Binding DataContext.EmojiVM.InsertEmojiCommand,
+                                                                  RelativeSource={RelativeSource AncestorType=Window}}"
+                                                CommandParameter="{Binding}"
+                                                Margin="2"
+                                                FontFamily="Segoe UI Emoji">
+                                                </Button>
+                                            </DataTemplate>
+                                        </HierarchicalDataTemplate.ItemTemplate>
+                                    </HierarchicalDataTemplate>
+                                </HierarchicalDataTemplate.ItemTemplate>
+                            </HierarchicalDataTemplate>
+                        </TreeView.ItemTemplate>
+                    </TreeView>
+                </ScrollViewer>
+            </Border>
+        </Popup>
+        
     </Grid>
+   
+
 </Window>
